--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,3 +166,153 @@ ul {
   font-size: 13px;
   padding: 8px 20px;
 }
+
+.cover {
+  height: 75vh;
+  max-height: 560px;
+  margin: 0 auto;
+  padding: 4px 8px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 50% 50%;
+  grid-gap: 8px;
+}
+
+.cover a {
+  color: #fff;
+}
+
+.cover-story {
+  position: relative;
+}
+
+.cover-story:first-child {
+  grid-column: 1;
+  grid-row: 1/3;
+}
+
+.cover-image {
+  background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/Apple-Arcade-Featured-796x417.jpg');
+  background-color: #000;
+  background-size: cover;
+  background-position: 50%;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.cover-trigger {
+  background: rgba(0, 0, 0, 0.25) url(../img/image-gradient.png) no-repeat;
+  background-size: 100% 100%;
+  display: block;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.cover-date {
+  display: block;
+  top: 16px;
+  color: #fff;
+  position: absolute;
+  right: 24px;
+  z-index: 5;
+}
+
+.cover-header {
+  padding: 20px 16px;
+  bottom: 4px;
+  left: 4px;
+  position: absolute;
+  right: 4px;
+  z-index: 3;
+}
+
+h5 {
+  font-family: Shentox, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  line-height: 1.5;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  font-size: 28px;
+  line-height: 1;
+  margin: 0 0 0.25em 0;
+  font-weight: 700;
+  font-family: Avalon, sans-serif;
+  letter-spacing: -0.015em;
+}
+
+article:first-child h2 {
+  font-size: 56px;
+}
+
+.cover-byline {
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.cover-byline li {
+  display: inline-block;
+  margin-right: 6px;
+}
+
+.icon--clock--light {
+  background-position: -160px -160px;
+}
+
+.icon--share--light {
+  background-position: -912px -912px;
+}
+
+.cover-byline li .icon {
+  -webkit-transform: scale(0.875);
+  transform: scale(0.875);
+  float: left;
+  margin-right: 4px;
+  opacity: 0.6;
+  vertical-align: middle;
+}
+
+.cover-gradient {
+  background: transparent url(../img/cover-gradient.png) no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+  bottom: 0;
+  left: 0;
+  mix-blend-mode: lighten;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 4;
+}
+
+.cover-logo {
+  color: #fff;
+  position: absolute;
+  right: 24px;
+  z-index: 5;
+  background: transparent url(../img/tnw.svg) no-repeat;
+  background-size: contain;
+  left: 20px;
+  max-width: 50%;
+  height: 100%;
+  max-height: 112px;
+  line-height: 1;
+  top: 20px;
+  pointer-events: none;
+  text-align: right;
+}
