--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,10 @@ ul {
   width: 20px;
 }
 
+.nav-menu-icon {
+  display: none;
+}
+
 .nav-mob-toggle span:first-child {
   transform: translateY(-6px);
 }
@@ -271,6 +275,9 @@ ul {
   .nav-message {
     padding-left: 0px;
     text-align: center;
+  }
+  .nav-menu-icon {
+    display: block;
   }
 }
 
