--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,8 +436,115 @@ article:first-child h2 {
   max-height: 112px;
   line-height: 1;
   top: 20px;
-  pointer-events: none;
+  pointer-events: none
   text-align: right;
+}
+.post-body a .story-title strong, .story-title .post-body a strong, .story-title a {
+  color: #000;
+}
+/* @media (min-width: 768px) {
+  .post-body a .story-title strong, .story-title .post-body a strong, .story-title a {
+    padding-left: 75px;
+
+  } */
+.story-byline li {
+  display: block;
+  float: left;
+}
+.story-byline li:after {
+  content: "\B7";
+  display: block;
+  float: right;
+  margin: 0 4px;
+}
+@media (min-width: 768px) {
+.u-col-m-4 {
+    -ms-flex-preferred-size: 33.33333333%;
+    flex-basis: 33.33333333%;
+    max-width: 33.33333333%;
+}
+}
+@media (min-width: 768px) {
+[class*=u-col-] {
+    padding: 100px;
+}
+}
+.u-col-xs-12 {
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%;
+  max-width: 100%;
+
+}
+
+[class*=" u-col-"], [class^=u-col-] {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  padding: 8px;
+  position: relative;
+}
+
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+.story-byline {
+  overflow: hidden;
+  *zoom: 1;
+  color: #aaa;
+  font-size: 12px;
+  line-height: 18px;
+  padding-top: 4px;
+}
+
+ol, ul {
+  list-style: none;
+}
+.latest {
+  margin-bottom: 2em;
+  padding-top: 24px;
+}
+.ltNws {
+  margin-bottom: 35px;
+}
+.ltNws > a{ 
+  color: #f42;
+  text-decoration: none;
+  font-family: Avalon,sans-serif;
+    font-size: 32px;
+    letter-spacing: -.015em;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    font-size: 100%;
+    vertical-align: baseline;
+    font-weight: bold;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility; 
+}
+.latest .distraction-title .post-body a strong:after, .latest .distraction-title a:after, .latest h2 .post-body a strong:after, .latest h2 a:after, .post-body a .latest .distraction-title strong:after, .post-body a .latest h2 strong:after {
+  background-size: 16px 16px;
+  content: "";
+  display: inline-block;
+  height: 16px;
+  margin-left: -8px;
+  position: relative;
+  top: 0;
+  width: 16px;
+}
+
+
+.ml-3 {
+  margin-left: 20px;
 }
 
 @media (max-width: 1024px) {
@@ -472,4 +579,306 @@ article:first-child h2 {
   article:first-child h2 {
     font-size: 20px;
   }
+}
+
+element.style {
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/tagomi-516x270.jpg);
+}
+@media (max-width: 767px) {
+  /* .story--smallMobile  {
+    left: 0;
+    padding-top: 75px;
+    position: absolute;
+    top: 0;
+    width: 75px;
+  } */
+  .story--smallMobile .story-image {
+      padding-right: 10px;
+      padding-top: 75px;
+      position: absolute;
+      top: 0;
+      width: 75px;
+    }
+    .story-title
+     {
+       
+      margin-left: 19%;
+
+    }  
+    /* .story-title a
+    {
+      
+     color: 
+
+   } */
+    .story-byline
+    {
+     margin-left: 19%;
+      
+   }
+ 
+  }
+  body, button, input, textarea {
+    font-family: ARS Maquette,Helvetica Neue,Arial,sans-serif;
+    font-size: 14px;
+}
+
+.deals-header {
+  font-size: 28px;
+  line-height: 1;
+  margin: 0 0 0.25em 0;
+  font-weight: 700;
+  font-family: Avalon, sans-serif;
+  letter-spacing: -0.015em;
+}
+  .wrapper {
+  *zoom: 1;
+  margin: 0 auto;
+  max-width: 1192px;
+  padding: 0 20px;
+}
+.post-body a .story-byline strong, .story-byline .post-body a strong, .story-byline a {
+  color: #aaa;
+}
+.u-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  margin: -8px;
+}
+
+@media (min-width: 768px){
+  .u-row {
+      margin: -10px;
+  }
+}
+.lazy.lazyLoaded {
+  opacity: 1;
+}
+.story-image {
+  background-color: #000;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: block;
+  height: 0;
+  overflow: hidden;
+  padding-top: 50%;
+  width: 100%;
+  margin-bottom: 8px;
+  position: relative;
+}
+.lazy {
+  -webkit-transition: .4s ease;
+  transition: .4s ease;
+  opacity: 0;
+  will-change: opacity;
+}
+.post-body a strong, a {
+  color:#f42;
+  text-decoration: none;
+}
+
+/* Deals section */
+
+.deals {
+  margin-bottom: 2em;
+}
+.deals-header {
+  overflow: hidden;
+  *zoom: 1;
+  margin-bottom: 24px;
+}
+.deals-header .distraction-title, .deals-header h2 {
+  float: left;
+  line-height: 32px;
+}
+.distraction-title, h2, h3 {
+  color: #f42;
+  font-weight: 700;
+  line-height: 1.1;
+}
+.deals-header-more {
+  float: right;
+  line-height: 18px;
+  margin-top: 11px;
+}
+.distraction-title, h2 {
+  font-family: Avalon,sans-serif;
+  font-size: 28px;
+  letter-spacing: -.015em;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+user agent stylesheet
+article, aside, footer, header, hgroup, main, nav, section {
+  display: block;
+}
+.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+body, button, input, textarea {
+  font-family: ARS Maquette,Helvetica Neue,Arial,sans-serif;
+  font-size: 14px;
+}
+body {
+  color: #555;
+  line-height: 1.5;
+  min-height: 100vh;
+}
+.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+html {
+  font-size: 14px;
+}
+html {
+  line-height: 1;
+}
+.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+*, :after, :before {
+-webkit-box-sizing: border-box;             
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  outline: none;
+  text-rendering: optimizeLegibility;
+}
+.verticals {
+  margin-bottom: 2em;
+}
+.vertical {
+  min-height: 60px;
+  position: relative;
+}
+@media (min-width: 768px) {
+  .deals {
+      margin-bottom: 3em;
+  }
+  }
+
+  @media (min-width: 768px) {
+.distraction-title, h2 {
+    font-size: 28px;
+}
+}
+
+@media (max-width: 1024px) {
+.deals.deals--long .deals-header .deals-header-more:first-of-type {
+    clear: both;
+}
+}
+
+@media (max-width: 1024px) {
+.deals.deals--long .deals-header .deals-header-more:not(:last-of-type) {
+    margin-right: 23px;
+}
+}
+
+@media (max-width: 1024px) {
+.deals.deals--long .deals-header .deals-header-more {
+    float: left;
+    display: block;
+}
+
+}
+
+@media (min-width: 768px) {
+.deals-header-more {
+    font-size: 16px;
+    margin-top: 10px;
+}
+}
+ 
+@media (min-width: 768px) {
+.verticals {
+    margin-bottom: 3em;
+}
+}
+
+@media (min-width: 768px) {
+.u-row {
+    margin: -10px;
+} 
+}
+@media (min-width: 768px) {
+.vertical {
+    *zoom: 1;
+    padding: 10px;
+}
 }
