--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,10 +436,12 @@ article:first-child h2 {
   max-height: 112px;
   line-height: 1;
   top: 20px;
-  pointer-events: none
+  pointer-events: none;
   text-align: right;
 }
-.post-body a .story-title strong, .story-title .post-body a strong, .story-title a {
+.post-body a .story-title strong,
+.story-title .post-body a strong,
+.story-title a {
   color: #000;
 }
 /* @media (min-width: 768px) {
@@ -452,31 +454,31 @@ article:first-child h2 {
   float: left;
 }
 .story-byline li:after {
-  content: "\B7";
+  content: '\B7';
   display: block;
   float: right;
   margin: 0 4px;
 }
 @media (min-width: 768px) {
-.u-col-m-4 {
+  .u-col-m-4 {
     -ms-flex-preferred-size: 33.33333333%;
     flex-basis: 33.33333333%;
     max-width: 33.33333333%;
-}
+  }
 }
 @media (min-width: 768px) {
-[class*=u-col-] {
+  [class*='u-col-'] {
     padding: 100px;
-}
+  }
 }
 .u-col-xs-12 {
   -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   max-width: 100%;
-
 }
 
-[class*=" u-col-"], [class^=u-col-] {
+[class*=' u-col-'],
+[class^='u-col-'] {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
@@ -484,7 +486,9 @@ article:first-child h2 {
   position: relative;
 }
 
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -500,7 +504,8 @@ article:first-child h2 {
   padding-top: 4px;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 .latest {
@@ -510,30 +515,37 @@ ol, ul {
 .ltNws {
   margin-bottom: 35px;
 }
-.ltNws > a{ 
+.ltNws > a {
   color: #f42;
   text-decoration: none;
-  font-family: Avalon,sans-serif;
-    font-size: 32px;
-    letter-spacing: -.015em;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    font-size: 100%;
-    vertical-align: baseline;
-    font-weight: bold;
+  font-family: Avalon, sans-serif;
+  font-size: 32px;
+  letter-spacing: -0.015em;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+  font-weight: bold;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   outline: none;
-  text-rendering: optimizeLegibility; 
+  text-rendering: optimizeLegibility;
 }
-.latest .distraction-title .post-body a strong:after, .latest .distraction-title a:after, .latest h2 .post-body a strong:after, .latest h2 a:after, .post-body a .latest .distraction-title strong:after, .post-body a .latest h2 strong:after {
+.latest .distraction-title .post-body a strong:after,
+.latest .distraction-title a:after,
+.latest h2 .post-body a strong:after,
+.latest h2 a:after,
+.post-body a .latest .distraction-title strong:after,
+.post-body a .latest h2 strong:after {
   background-size: 16px 16px;
-  content: "";
+  content: '';
   display: inline-block;
   height: 16px;
   margin-left: -8px;
@@ -541,7 +553,6 @@ ol, ul {
   top: 0;
   width: 16px;
 }
-
 
 .ml-3 {
   margin-left: 20px;
@@ -585,42 +596,26 @@ element.style {
   background-image: url(https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/tagomi-516x270.jpg);
 }
 @media (max-width: 767px) {
-  /* .story--smallMobile  {
+  .story--smallMobile {
+    min-height: 72px;
+    padding-left: 88px;
+    position: relative;
+  }
+  .story--smallMobile .story-image {
     left: 0;
     padding-top: 75px;
     position: absolute;
     top: 0;
     width: 75px;
-  } */
-  .story--smallMobile .story-image {
-      padding-right: 10px;
-      padding-top: 75px;
-      position: absolute;
-      top: 0;
-      width: 75px;
-    }
-    .story-title
-     {
-       
-      margin-left: 19%;
-
-    }  
-    /* .story-title a
-    {
-      
-     color: 
-
-   } */
-    .story-byline
-    {
-     margin-left: 19%;
-      
-   }
- 
   }
-  body, button, input, textarea {
-    font-family: ARS Maquette,Helvetica Neue,Arial,sans-serif;
-    font-size: 14px;
+}
+
+body,
+button,
+input,
+textarea {
+  font-family: ARS Maquette, Helvetica Neue, Arial, sans-serif;
+  font-size: 14px;
 }
 
 .deals-header {
@@ -631,13 +626,15 @@ element.style {
   font-family: Avalon, sans-serif;
   letter-spacing: -0.015em;
 }
-  .wrapper {
+.wrapper {
   *zoom: 1;
   margin: 0 auto;
   max-width: 1192px;
   padding: 0 20px;
 }
-.post-body a .story-byline strong, .story-byline .post-body a strong, .story-byline a {
+.post-body a .story-byline strong,
+.story-byline .post-body a strong,
+.story-byline a {
   color: #aaa;
 }
 .u-row {
@@ -654,9 +651,9 @@ element.style {
   margin: -8px;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .u-row {
-      margin: -10px;
+    margin: -10px;
   }
 }
 .lazy.lazyLoaded {
@@ -676,13 +673,14 @@ element.style {
   position: relative;
 }
 .lazy {
-  -webkit-transition: .4s ease;
-  transition: .4s ease;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
   opacity: 0;
   will-change: opacity;
 }
-.post-body a strong, a {
-  color:#f42;
+.post-body a strong,
+a {
+  color: #f42;
   text-decoration: none;
 }
 
@@ -696,11 +694,14 @@ element.style {
   *zoom: 1;
   margin-bottom: 24px;
 }
-.deals-header .distraction-title, .deals-header h2 {
+.deals-header .distraction-title,
+.deals-header h2 {
   float: left;
   line-height: 32px;
 }
-.distraction-title, h2, h3 {
+.distraction-title,
+h2,
+h3 {
   color: #f42;
   font-weight: 700;
   line-height: 1.1;
@@ -710,16 +711,111 @@ element.style {
   line-height: 18px;
   margin-top: 11px;
 }
-.distraction-title, h2 {
-  font-family: Avalon,sans-serif;
+.distraction-title,
+h2 {
+  font-family: Avalon, sans-serif;
   font-size: 28px;
-  letter-spacing: -.015em;
+  letter-spacing: -0.015em;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
   display: block;
 }
-.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+.distraction-title,
+.post-body a strong,
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -727,18 +823,108 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-size: 100%;
   vertical-align: baseline;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   outline: none;
   text-rendering: optimizeLegibility;
 }
-user agent stylesheet
-article, aside, footer, header, hgroup, main, nav, section {
+user agent stylesheet article,
+aside,
+footer,
+header,
+hgroup,
+main,
+nav,
+section {
   display: block;
 }
-.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+.distraction-title,
+.post-body a strong,
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -746,22 +932,29 @@ article, aside, footer, header, hgroup, main, nav, section {
   font-size: 100%;
   vertical-align: baseline;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   outline: none;
   text-rendering: optimizeLegibility;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   outline: none;
   text-rendering: optimizeLegibility;
 }
-body, button, input, textarea {
-  font-family: ARS Maquette,Helvetica Neue,Arial,sans-serif;
+body,
+button,
+input,
+textarea {
+  font-family: ARS Maquette, Helvetica Neue, Arial, sans-serif;
   font-size: 14px;
 }
 body {
@@ -769,7 +962,89 @@ body {
   line-height: 1.5;
   min-height: 100vh;
 }
-.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+.distraction-title,
+.post-body a strong,
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -777,7 +1052,9 @@ body {
   font-size: 100%;
   vertical-align: baseline;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -790,7 +1067,89 @@ html {
 html {
   line-height: 1;
 }
-.distraction-title, .post-body a strong, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+.distraction-title,
+.post-body a strong,
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -798,21 +1157,27 @@ html {
   font-size: 100%;
   vertical-align: baseline;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   outline: none;
   text-rendering: optimizeLegibility;
 }
-*, :after, :before {
--webkit-box-sizing: border-box;             
+*,
+:after,
+:before {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   outline: none;
   text-rendering: optimizeLegibility;
 }
-*, :after, :before {
+*,
+:after,
+:before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -826,59 +1191,188 @@ html {
   min-height: 60px;
   position: relative;
 }
+
+.story-investmentCard-name {
+  background: #f42;
+  color: #fff;
+  padding: 10.66666667px 16px;
+  padding-left: 84px;
+  margin: 0 !important;
+  font-size: 18px !important;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.story-investmentCard-deets {
+  padding: 10.66666667px 16px;
+  padding-left: 84px;
+  color: #000;
+  background: rgba(255, 68, 34, 0.08);
+  margin: 0;
+}
+
+.story-investmentCard-deets h4 {
+  font-size: 18px;
+  color: #000;
+  margin: 0 !important;
+}
+
+.story-investmentCard-deets h5 {
+  color: #000;
+  opacity: 0.5;
+}
+
+.story-investmentCard-card {
+  padding: 16px;
+}
+
+.story-investmentCard-bit:not(:last-child) {
+  margin-bottom: 0.5em;
+}
+
+.story-investmentCard-bit {
+  padding-left: 2em;
+  position: relative;
+  font-size: 13px;
+  color: #555;
+  margin-right: 1em;
+  display: block;
+  line-height: 22px;
+  height: 22px;
+}
+
+@media (min-width: 768px) {
+  .u-col-m-4 {
+    -ms-flex-preferred-size: 33.33333333%;
+    flex-basis: 33.33333333%;
+    max-width: 33.33333333%;
+  }
+}
+@media (min-width: 1024px) {
+  .u-col-l-3 {
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%;
+    max-width: 25%;
+  }
+}
 @media (min-width: 768px) {
   .deals {
-      margin-bottom: 3em;
+    margin-bottom: 3em;
   }
-  }
+}
 
-  @media (min-width: 768px) {
-.distraction-title, h2 {
+@media (min-width: 768px) {
+  .distraction-title,
+  h2 {
     font-size: 28px;
-}
+  }
 }
 
 @media (max-width: 1024px) {
-.deals.deals--long .deals-header .deals-header-more:first-of-type {
+  .deals.deals--long .deals-header .deals-header-more:first-of-type {
     clear: both;
-}
+  }
 }
 
 @media (max-width: 1024px) {
-.deals.deals--long .deals-header .deals-header-more:not(:last-of-type) {
+  .deals.deals--long .deals-header .deals-header-more:not(:last-of-type) {
     margin-right: 23px;
-}
+  }
 }
 
 @media (max-width: 1024px) {
-.deals.deals--long .deals-header .deals-header-more {
+  .deals.deals--long .deals-header .deals-header-more {
     float: left;
     display: block;
-}
-
+  }
 }
 
 @media (min-width: 768px) {
-.deals-header-more {
+  .deals-header-more {
     font-size: 16px;
     margin-top: 10px;
-}
-}
- 
-@media (min-width: 768px) {
-.verticals {
-    margin-bottom: 3em;
-}
+  }
 }
 
 @media (min-width: 768px) {
-.u-row {
+  .verticals {
+    margin-bottom: 3em;
+  }
+}
+
+@media (min-width: 768px) {
+  .u-row {
     margin: -10px;
-} 
+  }
 }
 @media (min-width: 768px) {
-.vertical {
+  .vertical {
     *zoom: 1;
     padding: 10px;
+  }
 }
+
+.story--investment {
+  background: #fffaf8;
+}
+
+.story-investmentCard-company-image {
+  width: 60px;
+  min-width: 60px;
+  max-width: 60px;
+  height: 60px;
+  min-height: 60px;
+  max-height: 60px;
+  margin: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.icon--tag--dark {
+  background-position: -976px -976px;
+}
+
+.icon--briefcase--dark {
+  background-position: -48px -48px;
+}
+
+.story-investmentCard-bit .icon {
+  position: absolute;
+  top: 0.2em;
+  left: 0;
+  opacity: 0.9;
+}
+
+.story--investment .story-byline {
+  margin-top: 0;
+}
+
+.vertical .story-byline {
+  border-top: 1px solid rgba(255, 68, 34, 0.25);
+  margin-top: 10px;
+  padding-top: 10px;
+}
+
+.story-addPadding {
+  padding: 16px;
+}
+
+.deals-header-more {
+  float: right;
+  line-height: 18px;
+  margin-top: 11px;
+}
+
+.deals-header-more:not(:first-of-type) {
+  margin-right: 23px;
+}
+
+@media (min-width: 768px) {
+  .deals-header-more {
+    font-size: 16px;
+    margin-top: 10px;
+  }
 }
